force-app/main/default/objects/Invoice_Line_Items__c/fields/CB_Invoice__c.field-meta.xml
<CustomField>
    <fullName>CB_Invoice__c</fullName>
    <label>CB Invoice</label>
    <referenceTo>CB_Invoice__c</referenceTo>
    <relationshipName>Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>