force-app/main/default/objects/Invoice_Line_Items__c/fields/Tax_exempt_reason__c.field-meta.xml
<CustomField>
    <fullName>Tax_exempt_reason__c</fullName>
    <label>Reason for tax exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>