force-app/main/default/objects/Invoice_Line_Items__c/fields/Total_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_amount__c</fullName>
    <label>Total amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>